--- a/football.ipynb
+++ b/football.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -126,18 +126,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Forward propagation"
+    "## 2. Forward propagation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear forward\n",
+    "### 2.1 Linear forward (Perceptron)\n",
     "\n",
     "<img src=\"./images/perceptron.png\" style=\"width:400px;display:block;margin:auto\">\n",
     "\n",
-    "The weighted sum can be presented as dot product of neuron inputs from previous layer and the connection weights plus bias:\n",
+    "The weighted sum can be presented as dot product of neuron inputs from previous layer and the connection weights plus bias. The vectorized formula looks like this:\n",
     "\n",
     "$$W^TX + b$$\n",
     "\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear activation functions:\n",
+    "### 2.2 Linear activation functions:\n",
     "There are many activation functions. For this case we are using two of them:\n",
     "- **ReLU** (Rectified Linear Unit)\n",
     "$$ReLU(Z) = max(0, Z)$$\n",
@@ -173,12 +173,14 @@
     "\n",
     "<img src=\"./images/activation_functions.png\" style=\"width:400px;display:block;margin:auto\">\n",
     "\n",
-    "*Activation function tells the neuron to pass its value based on an activation threshold. It's a similar way of how neurons in brain passes the signals (residual networks goes a step further in that). If I have to explain this concept to my students without any knowledge what Perceptron algorithm is I like to explain it like \"How much are we sure of something multiplied by how does it matter.\" For example: to say something is a dog the most important is if it's barking and has four legs rather than having a fur and a tail, most animals have them.*\n"
+    "*Activation function tells the neuron to pass its value based on an activation threshold. It's a similar way of how neurons in brain passes the signals (residual networks goes a step further in that). If I have to explain this concept to my students without any knowledge what Perceptron algorithm is I like to explain it like \"How much are we sure of something multiplied by how does it matter. If then, we think it's a dog than probably it's a dog.\" For example: to say something is a dog - the most important is if it's barking and has four legs rather than having a fur and a tail, most animals have them.*\n",
+    "\n",
+    "<img src=\"./images/weights_explained.png\" style=\"width:400px;display:block;margin:auto\">\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,13 +216,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forward propagation:\n",
+    "### 2.3 Forward propagation:\n",
     "Forward propagation passes the input through the each hidden layer of a network, the last layer is responsible for output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,17 +247,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loss function\n",
+    "### 2.4 Loss function\n",
     "A loss function is a measure of how well a machine learning model is performing on a given task during training. Cross-entropy cost function $J$ for a dataset with $m$ samples:\n",
     "\n",
     "$$J = -\\frac{1}{m} \\sum\\limits_{i = 1}^{m} (y^{(i)}\\log\\left(a^{[L] (i)}\\right) + (1-y^{(i)})\\log\\left(1- a^{[L](i)}\\right))$$\n",
     "\n",
-    "*I'm adding an epsilon value to avoid division by zero. Is it possible to do it in a different way?*"
+    "*I'm adding an epsilon value to avoid zero log. Is it possible to do it in a different way?*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,14 +276,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Backward Propagation"
+    "## 3. Backward Propagation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear backward\n",
+    "### 3.1 Linear backward\n",
+    "Backpropagation is used to calcuate the gradient of the loss function with respect to the parameters. Using these gradients later to update parameters is a process where a network actually learns.\n",
+    "\n",
+    "Backpropagation moves in opposite direction than forward propagation.\n",
     "\n",
     "$$ dW^{[l]} = \\frac{\\partial \\mathcal{J} }{\\partial W^{[l]}} = \\frac{1}{m} dZ^{[l]} A^{[l-1] T} $$\n",
     "$$ db^{[l]} = \\frac{\\partial \\mathcal{J} }{\\partial b^{[l]}} = \\frac{1}{m} \\sum_{i = 1}^{m} dZ^{[l](i)}$$\n",
@@ -290,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,12 +313,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Backpropagation of relu and sigmoid functions:"
+    "### 3.2 Backpropagation derivatives of relu and sigmoid functions:\n",
+    "\n",
+    "$$dZ^{[l]} = dA^{[l]} * g'(Z^{[l]})$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,19 +335,19 @@
     "    Z = cache\n",
     "    s = 1. / (1+np.exp(-Z))\n",
     "    dZ = dA  * s * (1.-s)\n",
-    "    return dZ\n"
+    "    return dZ"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Backpropagation of linear activation"
+    "### 3.3 Backpropagation of linear activation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,12 +365,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Backpropagation function"
+    "### 3.4 Backpropagation function\n",
+    "\n",
+    "*I'm adding an epsilon value to avoid division by zero. Is it possible to do it in a different way?*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +405,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feedforward network model:\n",
+    "### 3.5 Update parameters\n",
+    "Update parameters to minimalize the cost through the gradient descent algorithm where $\\alpha$ is learning rate.\n",
+    "\n",
+    "$$ W^{[l]} = W^{[l]} - \\alpha \\text{ } dW^{[l]}$$\n",
+    "$$ b^{[l]} = b^{[l]} - \\alpha \\text{ } db^{[l]}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_parameters(parameters, grads, learning_rate):\n",
+    "\n",
+    "    L = len(parameters) // 2 \n",
+    "\n",
+    "    for l in range(L):\n",
+    "        parameters[\"W\" + str(l+1)] = parameters[\"W\" + str(l+1)] - learning_rate * grads[\"dW\" + str(l+1)]\n",
+    "        parameters[\"b\" + str(l+1)] = parameters[\"b\" + str(l+1)] - learning_rate * grads[\"db\" + str(l+1)]\n",
+    "\n",
+    "    return parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Feedforward network model:\n",
     "\n",
     "Feedforward network consists of input, hidden layers and output which will perform binary classification. It's the most basic network which consists of dense hidden layers similarly to Tensorflow.\n",
     "\n",
@@ -407,12 +444,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create the model"
+    "### 4.1 Create the model\n",
+    "For each layer from `layer_dimension`, create the corresponding values of weights and bias."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,69 +475,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Update parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_parameters(parameters, grads, learning_rate):\n",
+    "### 4.2 Predict\n",
+    "Prediction in smple words predicts the classification by a single forward pass.\n",
     "\n",
-    "    L = len(parameters) // 2 \n",
-    "\n",
-    "    for l in range(L):\n",
-    "        parameters[\"W\" + str(l+1)] = parameters[\"W\" + str(l+1)] - learning_rate * grads[\"dW\" + str(l+1)]\n",
-    "        parameters[\"b\" + str(l+1)] = parameters[\"b\" + str(l+1)] - learning_rate * grads[\"db\" + str(l+1)]\n",
-    "\n",
-    "    return parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Predict\n",
     "*I created an additional helper function to get the accuracy.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "def predict(X, parameters):\n",
     "\n",
-    "    y_hat = np.zeros((1, X.shape[1]))\n",
     "    y_prob, caches = forward_propagation(X, parameters)\n",
+    "    y_hat = np.zeros((1, X.shape[1]))\n",
     "\n",
     "    for i in range(y_prob.shape[1]):\n",
     "        y_hat[0,i] = 1 if y_prob[0,i] > 0.5 else 0\n",
     "\n",
     "    return y_hat\n",
     "\n",
+    "\n",
     "def get_accuracy(X, y, parameters):\n",
     "    p = predict(X, parameters)\n",
     "    amount = X.shape[1]\n",
     "    accuracy = np.sum(np.equal(p, y))\n",
-    "    return accuracy / amount\n"
+    "    \n",
+    "    return accuracy / amount"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create and train the model "
+    "## 5. Create and train the model "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define the model architecture\n",
+    "### 5.1 Define the model architecture\n",
     "`create_model` function automatically initializes the hidden layers dimension and  weights.\n",
     "\n",
     "**How do set the network's architecture?**\n",
@@ -511,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -545,12 +563,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train the model"
+    "### 5.2 Train the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -622,19 +640,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate"
+    "## 6. Evaluate"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Accuracy and cost plot"
+    "### 6.1 Accuracy and cost plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -680,20 +698,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analyze the results:\n",
+    "### 6.2 Analyze the results:\n",
     "**If our team is red:**\n",
     "- Our team have difficulties in the midfield.\n",
     "- There is a significant gap between the wingers and line between defense and midfield.\n",
     "\n",
     "**Network analysis and possible improvements:**\n",
     "- It's possible to reach 95% accuracy.\n",
-    "- Definitely we have a problem with overfitting when we have 3 hidden layers.\n",
-    "- Why do we need high learning rate and number of epochs? High learning rate hinders the model from covergence. It causes spikes in accuracy. But on the other hand, how many epochs should such a basic task have? *TODO: Investigate*"
+    "- **Definitely we have a problem with overfitting** when we have 3 hidden layers.\n",
+    "- Why do we need high learning rate and number of epochs? **High learning rate hinders the model from covergence.** It causes spikes in accuracy. But on the other hand, how many epochs should such a basic task have? \n",
+    "\n",
+    "**TODO: Investigate possible improvements.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
