update text for training and predict

--- a/football.ipynb
+++ b/football.ipynb
@@ -476,7 +476,7 @@
    "metadata": {},
    "source": [
     "### 4.2 Predict\n",
-    "Prediction in smple words predicts the classification by a single forward pass.\n",
+    "Prediction in simple words predicts the classification through a single forward pass. The final result is between 0 and 1 therefore our prediction threshold is 0.5. \n",
     "\n",
     "*I created an additional helper function to get the accuracy.*"
    ]
@@ -563,7 +563,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2 Train the model"
+    "### 5.2 Train the model\n",
+    "\n",
+    "For each record in train dataset, we have to do a several full cycles of forward-backward propagation to reach the convergence by updating the neuron's parameters with each cycle."
    ]
   },
   {
