Fixed typo in formula equation

--- a/football.ipynb
+++ b/football.ipynb
@@ -368,7 +368,7 @@
     "### 3.4 Backpropagation function\n",
     "We are starting from the very end so we need to compute the derivative of cost with respect to $A^{[L]}$\n",
     "\n",
-    "$dA^{[L]} = \\frac{\\partial \\mathcal{L}}{\\partial A^{[L]}} = \\frac{Y}{A^{[L]}} - \\frac{1 - Y}{1 - A^{[L]}}$\n",
+    "$$dA^{[L]} = \\frac{\\partial \\mathcal{L}}{\\partial A^{[L]}} = - \\frac{Y}{A^{[L]}} - \\frac{1 - Y}{1 - A^{[L]}}$$\n",
     "\n",
     "*I'm adding an epsilon value to avoid division by zero. Is it possible to do it in a different way?*"
    ]
